--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -1,33 +1,46 @@
 body {
     background: #333;
-    color: #fff; }
+    color: #fff;
+}
+
 .navbar {
     border-bottom: #008ed6 3px solid;
-    opacity: 0.8; }
-    #home-section {
-        
-        min-height: 700px; }
-        #home-section .dark-overlay {
-          background-color: rgba(0, 0, 0, 0.7);
-          position: absolute;
-          top: 0;
-          left: 0;
-          width: 100%;
-          min-height: 700px; }
-        #home-section .home-inner {
-          padding-top: 150px; }
-        #home-section .card-form {
-          opacity: 0.8; }
-        #home-section .fa {
-          color: #008ed6;
-          background: #fff;
-          padding: 4px;
-          border-radius: 5px;
-          font-size: 30px; }
+    opacity: 0.8;
+}
 
-.admin_font{
+#home-section {
+    min-height: 700px;
+}
+
+#home-section .dark-overlay {
+    background-color: rgba(0, 0, 0, 0.7);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    min-height: 700px;
+}
+
+#home-section .home-inner {
+    padding-top: 150px;
+}
+
+#home-section .card-form {
+    opacity: 0.8;
+}
+
+#home-section .fa {
+    color: #008ed6;
+    background: #fff;
+    padding: 4px;
+    border-radius: 5px;
+    font-size: 30px;
+}
+
+.admin_font {
     color: black;
 }
+
 .card {
     padding-left: 20px;
     padding-right: 20px;
@@ -35,4 +48,3 @@ body {
     background-color: rgba(0, 162, 255, 0.2)!important;
     transition: 0.3s;
 }
-
