--- a/templates/attendance_app/Students.html
+++ b/templates/attendance_app/Students.html
@@ -76,9 +76,25 @@
   </div>
   </div>
 
+  
 
 </div>
 
+
+
+<div class="container">
+  <div class="row">
+  <div class=" col-lg-3 " ></div>
+  <div class="border border-primary col-lg-6 " style="text-align: center;padding:10px">
+  <form method="post" enctype="multipart/form-data">
+    {% csrf_token %}
+    <h5> Upload Students photo as ZIP file </h5>
+    {{ form.as_p }}
+    <button type="submit">Upload</button>
+  </form>
+</div>
+</div>
+</div>
 
 
 <div class="py-3"></div>
